# caddybot

caddybot_urdf/: CMakeLists.txt  package.xml
caddybot_urdf/config/: joint_names_caddyboturdf.yaml
caddybot_urdf/launch/: display.launch  display1.launch  gazebo.launch
caddybot_urdf/meshes/: LB_Link.STL  LeftF_Link.STL  RB_Link.STL  RightF_Link.STL
caddybot_urdf/rviz/: urdf.rviz
caddybot_urdf/urdf/: caddyboturdf.csv  caddyboturdf.gazebo.xacro  caddyboturdf.urdf  caddyboturdf.xacro  caddyboturdf1.urdf  caddyboturdf_backup.xacro  caddyboturdf_origin.xacro
practice/: CMakeLists.txt  package.xml
practice/arduinocode/readencoder/: readencoder.ino
practice/config/: ekf_localization.yaml  ekf_localization0.yaml  ekf_localization1.yaml  navsat_transform.yaml  navsat_transform1111.yaml
practice/launch/: 2arduino.launch  AGV_bringup.launch  AGV_bringup2.launch  AGV_slam.launch  AGV_slam_2.launch  AGV_slam_simulation.launch  AGV_teleop_key.launch  AGV_total.launch  AGV_world.launch  bal_arduino.launch  caddy_local.launch  caddy_teleop_key.launch  caddy_world.launch  imu.launch  imu2.launch  navigate.launch  read_arduino.launch  sim_teleop_key.launch  sim_world.launch  tuto.launch
practice/launch/include/: move_base.launch
practice/nodes/: AGV_teleop_key.py  RGintoPC.py  caddy_teleop_key.py  imu_filter2.py  imu_log.py  noise_odom.py  pub_gps.cpp  pub_gps.py  publisher.py  publisher3.py  sim_teleop_key  subscriber.py  tf_broad.cpp  tf_publisher.py  vel2odom.py
practice/param/: costmap_common_params.yaml  dwa_local_planner_params2.yaml
practice/worlds/: empty.world
robot_ctrl/: CMakeLists.txt  package.xml
robot_ctrl/Arduino/read_encoder/: read_encoder.ino
robot_ctrl/include/robot_ctrl/: DepthandDeg.h
robot_ctrl/msg/: CenterAndArray.msg  DepthandDeg.msg
robot_ctrl/src/Nodes/: STOP.cpp  depth_and_degree_plotter.py  human_location_processor.py  linear_actuator_cmd.py  location_plot.py  model_location_plotter.py  model_states_plotter.py  path_selector.cpp  set_down.py
robot_ctrl/src/launch/: caddybot_sim.launch  following.launch  gazebo.launch  plotter.launch
unitree_lidar_ros/: CMakeLists.txt
unitree_lidar_ros/config/: config.yaml  ekf_localization_buffer.yaml
unitree_lidar_ros/launch/: run.launch  run1.launch
unitree_lidar_ros/msg/: LenWay.msg  PathScore.msg  Route.msg  Routes.msg
unitree_lidar_ros/rviz/: view.rviz
unitree_lidar_ros/src/: lin_re2(error).py  newbuffer_fin.py  tf_broad_lidar.cpp
